--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <!-- Pie de Página -->
     <footer class="bg-dark text-white text-center p-3">
-        <p>&copy; 2022 Mi Página Web | <a href="https://www.facebook.com" class="text-white">Facebook</a> | <a href="https://www.twitter.com" class="text-white">Twitter</a></p>
+        <p> 2026 Mi Página Web | <a href="https://www.facebook.com" class="text-white">Facebook</a> | <a href="https://www.twitter.com" class="text-white">Twitter</a></p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -111,3 +111,4 @@
 </body>
 
 </html>
+
